# $Id$

2007-02-25
	* Created branch/1.5 copy of trunk/conky1.  Removing all experimental
	  network code from trunk/conky1.

2007-02-14
	* Include missing mboxscan.h in conky.h.
	* Fixed signedness warnings in conky.c.

2007-02-11
	* Added buffer_text_size option to change the size of the buffer for
	things like $exec, $tail, et cetera
	* Added $mboxscan which lets you display the Subject and From fields
	from recent email in an mbox file
	* Disambiguated (is that a word?) $cpu docs

2007-01-14
	* Fallback to gettimeofday() when clock_gettime () not available (mac os).

2007-01-09
	* API change (timing in milliseconds) for dexter_timedsampler_new ().

2007-01-07
	* Add config.rpath (created by gettextize -copy) to distribution
	  to satisfy AM_ICONV.
	* Clean up some warnings; remove ftp.[ch] from src/Makefile.am.

2006-12-29
	* Update svn ebuild to new sourceforge url scheme.
		- requires deletion of existing wc: rm -rf /usr/portage/distfile/svn-src/conky/
	* Added head/tail rewrite patch (thanks Ryan Twitchell)
	* Added diskio read/write sf.net patch 1542880 (thanks Blondak)

2006-12-26
	* Clear conky vars on disconnect/failure to open files.

2006-12-23
	* Updated to libmpdclient 0.12.0

2006-12-22
	* client/server infrastructure and prototype for linux only (so far):
		- requires libdexter (http://sourceforge.net/projects/libdexter)
	  	and the dxt-sysinfo plugin (svn only at the moment).
	* new config items:
		- dexter_client yes/no
		- dexter_server yes/no
		- dexter_config /path/to/libdexter/config (default: $HOME/.dexterrc)
		- own_window_class <WM Class Name> (default: Conky)
			- replaces wm_class_name
		- own_window_title <Window Title> (default: <hostname> - conky)
	* removed config items:
		- wm_class_name (use own_window_class, same function)
	* configure changes:
	  --disable-network (default=yes) with auto-detection for libdexter.
		- remove useless --enable-proc-uptime (PROC_UPTIME never referenced).  